# Agents-transcription

./: CLAUDE.md  README.md  api_client.py  config.py  main.py  pyproject.toml  state_manager.py  ui_components.py
.streamlit/: secrets.toml.example
agents/: __init__.py  base_agent.py  editing_assistant_agent.py  export_agent.py  file_processing_agent.py  quality_assurance_agent.py  transcription_agent.py  workflow_coordinator.py
tests/: test_api_client.py
utils/: async_handler.py  error_handler.py  state_optimizer.py
